add nav and styles

--- a/index.html
+++ b/index.html
@@ -7,22 +7,30 @@
 </head>
 <body>
 <h1>Главная</h1>
-<ul class="menu"> <!--список будет продолжаться !-->
-    <li><a href="/home">Начало</a></li>
-    <li><a href="/home">Виды Углеводов</a></li>
+<ul class="nav"> <!--список будет продолжаться !-->
+    <li><a href="#my positions 1">Начало</a></li>
+    <li><a href="#my positions 2">Виды Углеводов</a></li>
     <li><a href="/home">Конец</a></li>
 </ul>
+<a name="my positions 1"></a>
 <p>Леденцы, пирожные, кремовые торты, цукаты из экзотических фруктов – эти сладости настолько прочно вошли в нашу жизнь, что мы уже не представляем ее без очередной порции десерта. Но задумывались ли вы когда-нибудь о вреде сладкого? О том, что сахара портят наши зубы, кожу и органы? Если нет, тогда эта статья для вас. Сегодня мы поговорим о предполагаемом вреде сладких продуктов.
     </p><br>
+
 <p>Еще в школьные годы на уроках биологии нас учили тому, что сладкая еда – источник углеводов. А углеводы – это источник энергии, необходимой для работы человеческого организма. Соответственно, польза сладкого в том, что с его помощью человек получает энергию для своей жизнедеятельности. Из этого следует, что сахара – это полезные вещества? В этом вопросе есть свои нюансы. Для начала стоит разобраться с разновидностями углеводов и их предназначением.
     </p>
 <p><b>Все углеводы можно поделить</b></p>
+<a name="my positions 2">
 <ul>
     <li>  <strong>Простые</strong> – <i>вещества, состоящие из одной или двух молекул сахаров. К моносахарам относят глюкозу, галактозу и фруктозу. К дисахаридам относят сахарозу и лактозу с мальтозой. Простые соединения перевариваются довольно быстро и в кратчайшие сроки насыщают человеческий организм энергией. Такие вещества необходимы спортсменам (в виде сахарозаменителей) для мышечного синтеза гликогена и детям, чтобы обеспечить энергией растущий организм.</i>
     </li><br>
     <li><strong>Сложные</strong> – <i>представлены классом полисахаридов. Они состоят из сотен тысяч молекул моносахаров, при попадании в человеческий организм обеспечивают энергией и поддерживают метаболизм.</i>
        </li>
 </ul>
+    <p>Иногда в отдельный вид выделяют <b>клетчатку</b> – ее относят к нерастворимым углеводам. Она необходима нашему организму, чтобы насыщать его и регулировать процессы обмена. Содержится в волокнах овощей и фруктов.
+        </p>
+</a>
+<strong>Рассмотрим пользу и вред всех видов сахаров с помощью таблицы.</strong>
+
 <table id="tablepress-14" class="tablepress tablepress-id-14"><thead><tr class="row-1 odd"><th class="column-1">Вид соединения</th><th class="column-2">Польза для человека</th><th class="column-3">Возможный вред</th></tr></thead><tbody class="row-hover"><tr class="row-2 even"><td class="column-1">Моносахариды</td><td class="column-2">Глюкоза является основным элементом всех видов сахаров. Она способствует быстрой доставке питательных веществ к клеткам, регулирует энергетический обмен.<br> Галактоза способствует наполнению тканей энергией, что особенно важно для лиц, занимающихся физической активностью. Также она способна приводить к быстрой потере лишнего веса, а для взрослого населения может служить средством профилактики сахарного диабета.<br></td><td class="column-3">Фруктоза может привести к расстройствам пищеварения и увеличению в крови количества липидов.</td></tr><tr class="row-3 odd"><td class="column-1">Дисахариды</td><td class="column-2">Повышают работоспособность и способствуют улучшению памяти.<br> Поднимают настроение.<br> Лактоза улучшает всасывание кальция в кровь.<br> Мальтоза помогает всасывать в кровь витамины группы В и аминокислоты.<br></td><td class="column-3">Нарушают обмен веществ, способствуют разрушению зубной эмали.<br> В детском возрасте переизбыток дисахаридов может привести к неврозам.<br> Лактоза способна спровоцировать сильную аллергию у маленьких детей.<br></td></tr><tr class="row-4 even"><td class="column-1">Полисахариды</td><td class="column-2">Благодаря тому, что сложные соединения медленно перевариваются в тонком кишечнике, человек дольше чувствует насыщение.</td><td class="column-3">Избыток углеводов может привести к лишнему весу.</td></tr><tr class="row-5 odd"><td class="column-1">Клетчатка</td><td class="column-2">Благодаря тому, что клетчатка не переваривается организмом, она способствует очищению кишечника от остатков пищи и шлаков.</td><td class="column-3">Чрезмерное употребление фруктов и овощей, богатых клетчаткой, может вызвать расстройства пищеварения и нарушение стула.</td></tr></tbody></table>
 </body>
 </html>
