--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <ul class="nav"> <!--список будет продолжаться !-->
     <li><a href="#my positions 1">Начало</a></li>
     <li><a href="#my positions 2">Виды Углеводов</a></li>
+    <li><a href="#my positions 3">Таблица</a></li>
     <li><a href="/home">Конец</a></li>
 </ul>
 <a name="my positions 1"></a>
@@ -32,10 +33,11 @@
         </p>
 </a>
 <strong>Рассмотрим пользу и вред всех видов сахаров с помощью таблицы.</strong>
-
+<a name="my positions 3">
 <table id="tablepress-14" class="tablepress tablepress-id-14"><thead><tr class="row-1 odd"><th class="column-1">Вид соединения</th><th class="column-2">Польза для человека</th><th class="column-3">Возможный вред</th></tr></thead><tbody class="row-hover"><tr class="row-2 even"><td class="column-1">Моносахариды</td><td class="column-2">Глюкоза является основным элементом всех видов сахаров. Она способствует быстрой доставке питательных веществ к клеткам, регулирует энергетический обмен.<br> Галактоза способствует наполнению тканей энергией, что особенно важно для лиц, занимающихся физической активностью. Также она способна приводить к быстрой потере лишнего веса, а для взрослого населения может служить средством профилактики сахарного диабета.<br></td><td class="column-3">Фруктоза может привести к расстройствам пищеварения и увеличению в крови количества липидов.</td></tr><tr class="row-3 odd"><td class="column-1">Дисахариды</td><td class="column-2">Повышают работоспособность и способствуют улучшению памяти.<br> Поднимают настроение.<br> Лактоза улучшает всасывание кальция в кровь.<br> Мальтоза помогает всасывать в кровь витамины группы В и аминокислоты.<br></td><td class="column-3">Нарушают обмен веществ, способствуют разрушению зубной эмали.<br> В детском возрасте переизбыток дисахаридов может привести к неврозам.<br> Лактоза способна спровоцировать сильную аллергию у маленьких детей.<br></td></tr><tr class="row-4 even"><td class="column-1">Полисахариды</td><td class="column-2">Благодаря тому, что сложные соединения медленно перевариваются в тонком кишечнике, человек дольше чувствует насыщение.</td><td class="column-3">Избыток углеводов может привести к лишнему весу.</td></tr><tr class="row-5 odd"><td class="column-1">Клетчатка</td><td class="column-2">Благодаря тому, что клетчатка не переваривается организмом, она способствует очищению кишечника от остатков пищи и шлаков.</td><td class="column-3">Чрезмерное употребление фруктов и овощей, богатых клетчаткой, может вызвать расстройства пищеварения и нарушение стула.</td></tr></tbody></table>
-<img src="img/sladkoe3.jpeg">
-<p><i>Вред сладкого для взрослого человека</i></p>
+</a>
+<img src="img/sladkoe3.jpeg" height="200px" width="600px">
+<p><i><strong>Вред сладкого для взрослого человека</strong></i></p>
 <p>Каждый из нас хоть раз в жизни баловал себя вкусными продуктами – конфетами, пирожными или мармеладом. После употребления их в пищу получаешь восторг, эйфорию и ощущения умиротворения. Но чрезмерное употребление такой пищи чревато разрушительными последствиями для организма взрослого человека.
 </p>
 <p>Быстрорастворимые сахара в больших количествах способны нарушить работу органов и систем довольно сильно. Чтобы не допустить развития серьезных патологий, стоит знать, к чему может привести бесконтрольное употребление сладостей.
@@ -54,6 +56,17 @@
         Возникновение сильных аллергических реакций. Дело в том, что современные сладости, особенно пользующиеся популярностью, изготавливаются с добавлением различных химических соединений – красителей, консервантов, загустителей. Они очень вредны для органов и тканей, могут спровоцировать аллергию, нарушения работы органов. В некоторых случаях употребление таких добавок может стать пусковым механизмом для образования раковых клеток.
     </a> </li> <br>
 </ol>
-<img src="img/sladkoe2-2.jpg">
+<img src="img/sladkoe2-2.jpg"> <br>
+<b class="sugar">Как взрослому человеку бороться с этими патологиями? Необходимо придерживаться простых правил.</b>
+<ol>
+    <li>Ограничьте употребление сладких продуктов до одной суточной порции. Разрешенное количество – это около 30-50 г сахара. Такое количество сладости содержится в 5-10 чайных ложках сахарного песка или одной бутылке газированного напитка. Примерно это же количество чистого сахара содержится в 500 граммах сладких фруктов или в половине шоколадной плитки.
+    </li> <br>
+    <li>Пейте достаточное количество чистой воды. Вода – лучший катализатор обменных процессов в человеческом организме.</li><br>
+    <li>Занимайтесь физическими нагрузками. Спорт – это лучшее средство, чтобы убрать лишние калории и нормализовать обменные процессы в организме.</li><br>
+    <li>Отдавайте предпочтение натуральным сладостям хорошего качества, а не дешевым карамелькам и молочным плиткам.
+    </li><br>
+    <li>При предрасположенности организма к патологиям внутренних органов (например, если родители болели гипертонической болезнью или сахарным диабетом) стоит ограничить потребление сладкого. При такой наследственности вероятность заболеть довольно высокая.</li>
+</ol>
+<img src="img/sladkoe0.jpg">
 </body>
 </html>
