--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
 </head>
 <body>
 <h1>Главная</h1>
-<ul class="nav"> <!--список будет продолжаться !-->
-    <li><a href="#my positions 1">Начало</a></li>
-    <li><a href="#my positions 2">Виды Углеводов</a></li>
-    <li><a href="#my positions 3">Таблица</a></li>
-    <li><a href="/home">Конец</a></li>
-</ul>
-<a name="my positions 1"></a>
+<div class="sidenav">
+    <a href="#my positions 1">Начало</a>
+    <a href="#my positions 2">Виды Углеводов</a>
+   <a href="#my positions 3">Таблица</a>
+    <a href="/home">Конец</a>
+</div>
+<div class="main">
+    <a name="my positions 1">
 <p>Леденцы, пирожные, кремовые торты, цукаты из экзотических фруктов – эти сладости настолько прочно вошли в нашу жизнь, что мы уже не представляем ее без очередной порции десерта. Но задумывались ли вы когда-нибудь о вреде сладкого? О том, что сахара портят наши зубы, кожу и органы? Если нет, тогда эта статья для вас. Сегодня мы поговорим о предполагаемом вреде сладких продуктов.
     </p><br>
 <img src="img/sladkoe1.jpg">
-
+    </a>
 <h1>Для чего необходимы сладости?</h1>
 <p>Еще в школьные годы на уроках биологии нас учили тому, что сладкая еда – источник углеводов. А углеводы – это источник энергии, необходимой для работы человеческого организма. Соответственно, польза сладкого в том, что с его помощью человек получает энергию для своей жизнедеятельности. Из этого следует, что сахара – это полезные вещества? В этом вопросе есть свои нюансы. Для начала стоит разобраться с разновидностями углеводов и их предназначением.
     </p>
@@ -68,5 +69,6 @@
     <li>При предрасположенности организма к патологиям внутренних органов (например, если родители болели гипертонической болезнью или сахарным диабетом) стоит ограничить потребление сладкого. При такой наследственности вероятность заболеть довольно высокая.</li>
 </ol>
 <img src="img/sladkoe0.jpg">
+</div>
 </body>
 </html>
