--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Главная</h1>
+<h1 class="menu">Меню</h1>
 <div class="sidenav">
     <a href="#my positions 1">Начало</a>
     <a href="#my positions 2">Виды Углеводов</a>
