--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             </p>
             <p><b>Все углеводы можно поделить</b></p>
             <a name="my positions 2">
-                <ul>
-                    <li><strong>Простые</strong> – <i>вещества, состоящие из одной или двух молекул сахаров. К
+
+                  <p><strong>Простые</strong> – <i>вещества, состоящие из одной или двух молекул сахаров. К
                         моносахарам
                         относят глюкозу, галактозу и фруктозу. К дисахаридам относят сахарозу и лактозу с мальтозой.
                         Простые
@@ -49,21 +49,20 @@
                         Такие вещества необходимы спортсменам (в виде сахарозаменителей) для мышечного синтеза гликогена
                         и
                         детям, чтобы обеспечить энергией растущий организм.</i>
-                    </li>
+                </p>
                     <br>
-                    <li><strong>Сложные</strong> – <i>представлены классом полисахаридов. Они состоят из сотен тысяч
+                    <p><strong>Сложные</strong> – <i>представлены классом полисахаридов. Они состоят из сотен тысяч
                         молекул
                         моносахаров, при попадании в человеческий организм обеспечивают энергией и поддерживают
-                        метаболизм.</i>
-                    </li>
-                </ul>
+                        метаболизм.</i></p>
+
                 <p>Иногда в отдельный вид выделяют <b>клетчатку</b> – ее относят к нерастворимым углеводам. Она
                     необходима
                     нашему организму, чтобы насыщать его и регулировать процессы обмена. Содержится в волокнах овощей и
                     фруктов.
                 </p>
             </a>
-            <strong>Рассмотрим пользу и вред всех видов сахаров с помощью таблицы.</strong>
+          <p>Рассмотрим пользу и вред всех видов сахаров с помощью таблицы.</p>
             <a name="my positions 3">
                 <table id="tablepress-14" class="tablepress tablepress-id-14">
                     <thead>
@@ -122,7 +121,7 @@
                     </tbody>
                 </table>
             </a>
-            <img src="img/sladkoe3.jpeg" height="200px" width="600px">
+            <img src="img/sladkoe3.jpeg">
             <p><i><strong>Вред сладкого для взрослого человека</strong></i></p>
             <p>Каждый из нас хоть раз в жизни баловал себя вкусными продуктами – конфетами, пирожными или мармеладом.
                 После
