--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p><b>Все углеводы можно поделить</b></p>
             <a name="my positions 2">
 
-                  <p><strong>Простые</strong> – <i>вещества, состоящие из одной или двух молекул сахаров. К
+                  <p><strong>Простые</strong> – вещества, состоящие из одной или двух молекул сахаров. К
                         моносахарам
                         относят глюкозу, галактозу и фруктозу. К дисахаридам относят сахарозу и лактозу с мальтозой.
                         Простые
@@ -48,13 +48,13 @@
                         энергией.
                         Такие вещества необходимы спортсменам (в виде сахарозаменителей) для мышечного синтеза гликогена
                         и
-                        детям, чтобы обеспечить энергией растущий организм.</i>
+                        детям, чтобы обеспечить энергией растущий организм.
                 </p>
                     <br>
-                    <p><strong>Сложные</strong> – <i>представлены классом полисахаридов. Они состоят из сотен тысяч
+                    <p><strong>Сложные</strong> – представлены классом полисахаридов. Они состоят из сотен тысяч
                         молекул
                         моносахаров, при попадании в человеческий организм обеспечивают энергией и поддерживают
-                        метаболизм.</i></p>
+                        метаболизм.</p>
 
                 <p>Иногда в отдельный вид выделяют <b>клетчатку</b> – ее относят к нерастворимым углеводам. Она
                     необходима
@@ -213,5 +213,14 @@
             </ol>
             <img src="img/sladkoe0.jpg">
         </div>
+    </div>
+</div>
 </body>
+<footer>
+    <ul>
+        <li><a href="#">Главная</a></li>
+        <li><a href="#">О нас</a></li>
+        <li><a href="#">Контакты</a></li>
+    </ul>
+</footer>
 </html>
