--- a/index.html
+++ b/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
-    <canvas id="canvas"></canvas>
+
 
 </head>
 
-<body calss="page">
-<div class="switch">
-    <input type="checkbox">
-    <p>Тёмная тема</p>
-</div>
+<body class="page">
 <header class="page-header">
 <div class="container">
     <h1 class="page-title"> Мой сайт</h1>
@@ -26,6 +22,17 @@
         <a class="navigation_link" href="#my positions 3">Таблица</a>
         <a class="navigation_link" href="#">Конец</a>
     </div>
+    <div id="inline">
+        <h2>Онлайн заявка</h2>
+        <form id="contact" action="#" method="post" name="contact">
+            <input id="name" class="txt" name="name" type="name" placeholder="Ваше имя">
+            <input id="phone" class="txt" name="phone" type="phone" placeholder="Ваш телефон">
+            <input id="email" class="txt" name="email" type="email" placeholder="Ваш e-mail">
+            <textarea id="msg" class="txtarea" name="msg" placeholder="Ваше сообщение:"></textarea>
+            <button id="send">Отправить</button>
+        </form>
+    </div>
+
     <div class="content_right">
         <div class="main">
             <a name="my positions 1">
@@ -158,8 +165,8 @@
                     всегда советуют иметь при себе сладкую конфету, чтобы после инъекций инсулина восстановить баланс
                     сахаров в
                     крови
-                </a></li>
-                <br>
+                </a></li>  <br>
+
                 <li><a href="#">
                     Кариес и другие заболевания полости рта. Сладкая пища – наилучший источник питания микроорганизмов.
                     Если
@@ -177,8 +184,8 @@
                     расстройства пищеварения. В тяжелых случаях неконтролируемый прием сладостей становится причиной
                     развития
                     язвенного колита. А колит без надлежащего лечения может спровоцировать раковую опухоль
-                </a></li>
-                <br>
+                </a></li> <br>
+
                 <li><a href="#">
                     Возникновение сильных аллергических реакций. Дело в том, что современные сладости, особенно
                     пользующиеся
@@ -188,8 +195,8 @@
                     органов. В некоторых случаях употребление таких добавок может стать пусковым механизмом для
                     образования
                     раковых клеток.
-                </a></li>
-                <br>
+                </a></li>  <br>
+
             </ol>
             <img src="img/sladkoe2-2.jpg"> <br>
             <b class="sugar">Как взрослому человеку бороться с этими патологиями? Необходимо придерживаться простых
@@ -202,22 +209,22 @@
                     газированного напитка. Примерно это же количество чистого сахара содержится в 500 граммах сладких
                     фруктов
                     или в половине шоколадной плитки.
-                </li>
-                <br>
+                </li> <br>
+
                 <li>Пейте достаточное количество чистой воды. Вода – лучший катализатор обменных процессов в
                     человеческом
                     организме.
-                </li>
-                <br>
+                </li> <br>
+
                 <li>Занимайтесь физическими нагрузками. Спорт – это лучшее средство, чтобы убрать лишние калории и
                     нормализовать
                     обменные процессы в организме.
-                </li>
-                <br>
+                </li> <br>
+
                 <li>Отдавайте предпочтение натуральным сладостям хорошего качества, а не дешевым карамелькам и молочным
                     плиткам.
-                </li>
-                <br>
+                </li> <br>
+
                 <li>При предрасположенности организма к патологиям внутренних органов (например, если родители болели
                     гипертонической болезнью или сахарным диабетом) стоит ограничить потребление сладкого. При такой
                     наследственности вероятность заболеть довольно высокая.
@@ -227,13 +234,15 @@
         </div>
     </div>
 </div>
+
+
 </body>
 <footer>
     <p class="footer1">
     <a href="#">Главная</a>
-        <a href="#">О нас</a>
-        <a href="#">Контакты</a>
+        <a href="about.html">О нас</a>
+        <a href="contacts.html">Задать вопрос</a>
     </p>
 </footer>
-<script src="scroll.js"></script>
+
 </html>
